# endbasic

./: .NEWS.md.swp  .gitignore  .travis.yml  CONTRIBUTING.md  Cargo.toml  Makefile  NEWS.md  README.md  RELEASE.md  config.mk.tmpl  prek.toml  rust-toolchain.toml  rustfmt.toml
cli/: Cargo.toml  README.md  build.rs
cli/examples/: guess.bas  tour.bas
cli/src/: console.rs  demos.rs  exit.rs  gpio.rs  lib.rs  main.rs  propline.rs  sdl.rs  storage.rs  store.rs
cli/tests/: integration_test.rs
cli/tests/cli/: help.out  help.out.rpi  help.out.rpi.sdl  help.out.sdl  interactive.bas  interactive.err  interactive.out  propline-bad-comment.bas  propline-bad-comment.err  propline-bad-console.bas  propline-bad-console.err  propline-override-console.bas  run-from-cloud.out  shebang-exec.bas  shebang-exec.out  version.out
cli/tests/examples/: alarm.in  alarm.out  bounce.in  bounce.out  fibonacci.bas  fibonacci.in  fibonacci.out  gpio.bas  gpio.in  gpio.out  guess.bas  guess.in  guess.out  hello.bas  hello.in  hello.out  palette.bas  palette.in  palette.out  tour.bas  tour.in  tour.out
cli/tests/lang/: bitwise.bas  bitwise.out  control-flow-errors.in  control-flow-errors.out  control-flow.bas  control-flow.out  exec-error.bas  exec-error.err  exprs-errors.in  exprs-errors.out  exprs.bas  exprs.out  functions.bas  functions.out  lexer-error.bas  lexer-error.err  matrix.bas  matrix.out  operators.in  operators.out  parser-error.err  types.bas  types.in  types.out  utf8.bas  utf8.out  yes-no.bas  yes-no.out
cli/tests/repl/: README.md  autoexec.bas  autoexec.out  colors.in  colors.out  console.bas  console.out  dir.in  dir.out  editor.in  editor.out  exit-nonzero.bas  exit-saved.in  exit-saved.out  exit-unsaved.in  exit-unsaved.out  exit-zero.bas  exit.bas  exit.out  help.bas  help.in  help.out  interactive.in  interactive.out  load-save.out  regen.sh  state-sharing.in  state-sharing.out  storage.in  storage.out
client/: Cargo.toml  NOTICE  README.md
client/src/: cloud.rs  cmds.rs  drive.rs  lib.rs  testutils.rs
cloud/: Cargo.toml  README.md
cloud/src/: cmds.rs  drive.rs  lib.rs  testutils.rs
core/: Cargo.toml  NOTICE  README.md
core/examples/: complete-interactive.rs  complete-scripting.rs  complete.rs  config.rs  custom-commands.rs  dsl.rs  hello.bas  minimal.rs  tour.bas
core/src/: ast.rs  bytecode.rs  callable.rs  compiler.rs  console.rs  editor.rs  eval.rs  exec.rs  help.rs  image.rs  lexer.rs  lib.rs  mem.rs  num.rs  numerics.rs  parser.rs  program.rs  reader.rs  repl.rs  store.rs  strings.rs  syms.rs  testutils.rs  value.rs
core/src/compiler/: args.rs  exprs.rs  ids.rs  mod.rs  syms.rs  symtable.rs  top.rs
core/src/vm/: context.rs  mod.rs
core/tests/: config.out  control-flow.bas  demo-guess.out  demo-hello.in  demo-hello.out  demo-tour.bas  demo-tour.out  dsl.out  examples_test.rs  exec-error.err  integration_test.rs  interactive.out  lexer-error.bas  lexer-error.err  no-repl-commands.err  parser-error.bas  parser-error.err  script.bas  script.out  test_args.md  test_arithmetic_add.md  test_arithmetic_div.md  test_arithmetic_mod.md  test_arithmetic_mul.md  test_arithmetic_neg.md  test_arithmetic_pow.md  test_arithmetic_sub.md  test_arrays.md  test_assignments.md  test_bitwise_not.md  test_bitwise_shl.md  test_bitwise_shr.md  test_case_insensitivity.md  test_data.md  test_do.md  test_end.md  test_for.md  test_functions.md  test_globals.md  test_gosub.md  (+20 more)
core/tests/testutils/: mod.rs
core2/: Cargo.toml  NOTICE  README.md
core2/examples/: config.rs
core2/src/: ast.rs  bytecode.rs  callable.rs  convert.rs  image.rs  lexer.rs  lib.rs  mem.rs  num.rs  parser.rs  reader.rs  testutils.rs  vm.rs
core2/src/compiler/: args.rs  (+7 more)
core2/tests/: config.out  examples_test.rs  integration_test.rs  test_args.md  test_arithmetic.md  test_arithmetic_add.md  test_arithmetic_add.txt  test_arithmetic_div.md  test_arithmetic_errors.txt  test_arithmetic_mod.md  test_arithmetic_mul.md  test_arithmetic_neg.md  test_arithmetic_pow.md  test_arithmetic_sub.md  test_arrays.md  test_assignment_annotation_mismatch.txt  test_assignment_first_annotated.txt  test_assignment_first_type_mismatch.txt  test_assignment_second_type_mismatch.txt  test_assignment_twice.txt  test_assignment_type_casting.txt  test_assignment_type_deduction.txt  test_assignments.md  test_bitwise_and.md  test_bitwise_not.md  test_bitwise_or.md  test_bitwise_shl.md  test_bitwise_shr.md  test_bitwise_xor.md  test_call_errors.md  test_case_insensitivity.md  test_data.md  test_do.md  test_empty.md  test_empty.txt  test_end.md  test_end_bare.txt  test_end_global_variable.txt  test_end_immediate_double.txt  test_end_immediate_integer.txt  (+42 more)
fuse/: Cargo.toml  README.md
fuse/src/: fs.rs  main.rs
fuse/tests/: integration_test.rs
repl/: Cargo.toml  README.md
repl/examples/: alarm.bas  bounce.bas  fibonacci.bas  gpio.bas  guess.bas  palette.bas  tour.bas
repl/src/: demos.rs  editor.rs  lib.rs  logo.rs
rpi/: Cargo.toml  NOTICE  README.md
rpi/src/: gpio.rs  lib.rs  spi.rs  st7735s.rs
sdl/: Cargo.toml  README.md  build.rs
sdl/src/: console.rs  font.rs  host.rs  lib.rs  spec.rs
st7735s/: Cargo.toml  NOTICE  README.md
st7735s/src/: lib.rs
std/: Cargo.toml  NOTICE  README.md
std/examples/: complete-interactive.rs  complete-scripting.rs  script-runner.rs
std/src/: arrays.rs  console.rs  data.rs  datetime.rs  editor.rs  exec.rs  gfx.rs  help.rs  lang.md  lib.rs  numerics.rs  program.rs  sdl.rs  spi.rs  store.rs  strings.rs  terminal.rs  testutils.rs
std/tests/: integration_test.rs  interactive.bas  script-errors.bas  script-errors.err  script.bas  script.err
terminal/: Cargo.toml  NOTICE  README.md
terminal/src/: lib.rs
web/: .gitignore  Cargo.toml  Makefile  README.md  build.rs  package-lock.json  package.json  webpack.config.js
web/js/: index.js
web/src/: audio.rs  canvas.rs  datetime.rs  index.html  index.js  input.rs  lib.rs  store.rs  xterm.rs
web/static/: index.html  style.css
web/www/: bootstrap.js  index.html  index.js  package-lock.json  package.json  style.css  webpack.config.js
(+186 files in other folders)
