[package]
name = "endbasic"
version = "0.6.0" # ENDBASIC-VERSION
license = "Apache-2.0"
authors = ["Julio Merino <jmmv@endbasic.dev>"]
categories = ["development-tools", "parser-implementations"]
keywords = ["basic", "interpreter", "learning", "programming"]
description = "The EndBASIC programming language - CLI"
homepage = "https://www.endbasic.dev/"
repository = "https://github.com/endbasic/endbasic"
readme = "README.md"
edition = "2018"

[features]
default = ["bin"]
bin = ["endbasic-std/crossterm", "tokio"]
rpi = ["endbasic-std/rpi"]

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
dirs = "2.0"
getopts = "0.2"
thiserror = "1.0"
time = { version = "0.2", features = ["std"] }
tokio = { version = "1", features =  ["full"], optional = true }

[dependencies.endbasic-core]
version = "0.6.0" # ENDBASIC-VERSION
path = "../core"

[dependencies.endbasic-std]
version = "0.6.0" # ENDBASIC-VERSION
path = "../std"
default-features = false

[dev-dependencies]
futures-lite = "1.1"
regex = "1"
tempfile = "3"
