[package]
name = "endbasic"
version = "0.9.99" # ENDBASIC-VERSION
license = "Apache-2.0"
authors = ["Julio Merino <jmmv@endbasic.dev>"]
categories = ["development-tools", "parser-implementations"]
keywords = ["basic", "interpreter", "learning", "programming"]
description = "The EndBASIC programming language - CLI"
homepage = "https://www.endbasic.dev/"
repository = "https://github.com/endbasic/endbasic"
readme = "README.md"
edition = "2018"

[features]
default = ["crossterm"]
crossterm = ["endbasic-terminal"]
sdl = ["endbasic-sdl"]
rpi = ["endbasic-rpi"]

[dependencies]
anyhow = "1.0"
dirs = "2.0"
getopts = "0.2"
thiserror = "1.0"

[dependencies.endbasic-client]
version = "0.9.99" # ENDBASIC-VERSION
path = "../client"

[dependencies.endbasic-core]
version = "0.9.99" # ENDBASIC-VERSION
path = "../core"

[dependencies.endbasic-repl]
version = "0.9.99" # ENDBASIC-VERSION
path = "../repl"

[dependencies.endbasic-rpi]
version = "0.9.99" # ENDBASIC-VERSION
path = "../rpi"
optional = true

[dependencies.endbasic-sdl]
version = "0.9.99" # ENDBASIC-VERSION
path = "../sdl"
optional = true

[dependencies.endbasic-std]
version = "0.9.99" # ENDBASIC-VERSION
path = "../std"

[dependencies.endbasic-terminal]
version = "0.9.99" # ENDBASIC-VERSION
path = "../terminal"
optional = true

[dependencies.tokio]
version = "1"
features = ["full"]

[dev-dependencies]
regex = "1"
tempfile = "3"
