[package]
name = "endbasic-client"
version = "0.9.99" # ENDBASIC-VERSION
license = "Apache-2.0"
authors = ["Julio Merino <jmmv@endbasic.dev>"]
categories = ["development-tools", "parser-implementations"]
keywords = ["basic", "interpreter", "learning", "programming"]
description = "The EndBASIC programming language - cloud service client"
homepage = "https://www.endbasic.dev/"
repository = "https://github.com/endbasic/endbasic"
readme = "README.md"
edition = "2018"

[dependencies]
async-trait = "0.1"
base64 = "0.13"
bytes = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
time = { version = "0.2", features = ["std"] }
url = "2.2"

[dependencies.endbasic-core]
version = "0.9.99" # ENDBASIC-VERSION
path = "../core"

[dependencies.endbasic-std]
version = "0.9.99" # ENDBASIC-VERSION
path = "../std"

[dependencies.reqwest]
version = "0.11"
default-features = false
features = ["native-tls"]

[dev-dependencies]
rand = "0.8"
serde_test = "1"
tokio = { version = "1", features =  ["full"] }
