[package]
name = "endbasic-cloud"
version = "0.13.99" # ENDBASIC-VERSION
license = "AGPL-3.0-or-later"
authors = ["Julio Merino <jmmv@endbasic.dev>"]
categories = ["development-tools", "parser-implementations"]
keywords = ["basic", "interpreter", "learning", "programming"]
description = "The EndBASIC programming language - cloud service integration"
homepage = "https://www.endbasic.dev/"
repository = "https://github.com/endbasic/endbasic"
readme = "README.md"
edition = "2024"

[lints]
workspace = true

[dependencies]
async-trait = "0.1"
time = { version = "0.3", features = ["std"] }

[dependencies.endbasic-client]
version = "0.13.99" # ENDBASIC-VERSION
path = "../client"

[dependencies.endbasic-core]
version = "0.13.99" # ENDBASIC-VERSION
path = "../core"

[dependencies.endbasic-std]
version = "0.13.99" # ENDBASIC-VERSION
path = "../std"

[dev-dependencies]
rand = "0.8"
serde_test = "1"
tokio = { version = "1", features =  ["full"] }

[dev-dependencies.endbasic-client]
version = "0.13.99" # ENDBASIC-VERSION
path = "../client"
features = ["testutils"]
