[package]
name = "endbasic-core"
version = "0.10.0" # ENDBASIC-VERSION
license = "Apache-2.0"
authors = ["Julio Merino <jmmv@endbasic.dev>"]
categories = ["development-tools", "parser-implementations"]
keywords = ["basic", "interpreter", "learning", "programming"]
description = "The EndBASIC programming language - core"
homepage = "https://www.endbasic.dev/"
repository = "https://github.com/endbasic/endbasic"
readme = "README.md"
edition = "2018"

[dependencies]
async-channel = "1.5"
async-recursion = "0.3"
async-trait = "0.1"
thiserror = "1.0"

[dev-dependencies]
futures-lite = "1.1"
tokio = { version = "1", features = ["full"] }
