[package]
name = "endbasic-core"
version = "0.12.99" # ENDBASIC-VERSION
license = "AGPL-3.0-or-later"
authors = ["Julio Merino <jmmv@endbasic.dev>"]
categories = ["development-tools", "parser-implementations"]
keywords = ["basic", "interpreter", "learning", "programming"]
description = "The EndBASIC programming language - core"
homepage = "https://www.endbasic.dev/"
repository = "https://github.com/endbasic/endbasic"
readme = "README.md"
edition = "2024"
publish = false

[lints]
workspace = true

[dependencies]
async-trait = "0.1"
thiserror = "1.0"

[dev-dependencies]
futures-lite = "2.2"
tempfile = "3"
tokio = { version = "1", features = ["full"] }

[[example]]
name = "core-config"
path = "examples/config.rs"
harness = false
