[package]
name = "endbasic-fuse"
version = "0.13.99" # ENDBASIC-VERSION
license = "AGPL-3.0-or-later"
authors = ["Julio Merino <jmmv@endbasic.dev>"]
categories = ["development-tools", "filesystem"]
keywords = ["basic", "cloud", "filesystem", "fuse"]
description = "The EndBASIC programming language - FUSE cloud filesystem"
homepage = "https://www.endbasic.dev/"
repository = "https://github.com/endbasic/endbasic"
readme = "README.md"
edition = "2024"

[lints]
workspace = true

[dependencies]
anyhow = "1.0"
getoptsargs = "0.2"
libc = "0.2"
thiserror = "1.0"

[dependencies.endbasic-client]
version = "0.13.99" # ENDBASIC-VERSION
path = "../client"

[dependencies.tokio]
version = "1"
features = ["rt"]

[target.'cfg(target_os = "linux")'.dependencies]
fuser = "0.14"

[dev-dependencies]
tempfile = "3"
