[package]
name = "endbasic-repl"
version = "0.7.0" # ENDBASIC-VERSION
license = "Apache-2.0"
authors = ["Julio Merino <jmmv@endbasic.dev>"]
categories = ["development-tools", "parser-implementations"]
keywords = ["basic", "interpreter", "learning", "programming"]
description = "The EndBASIC programming language - REPL"
homepage = "https://www.endbasic.dev/"
repository = "https://github.com/endbasic/endbasic"
readme = "README.md"
edition = "2018"

[dependencies]
async-trait = "0.1"
time = { version = "0.2", features = ["std"] }

[dependencies.endbasic-core]
version = "0.7.0" # ENDBASIC-VERSION
path = "../core"

[dependencies.endbasic-std]
version = "0.7.0" # ENDBASIC-VERSION
path = "../std"

[dev-dependencies]
futures-lite = "1.1"
