[package]
name = "endbasic-rpi"
version = "0.10.99" # ENDBASIC-VERSION
license = "Apache-2.0"
authors = ["Julio Merino <jmmv@endbasic.dev>"]
categories = ["development-tools", "parser-implementations"]
keywords = ["basic", "interpreter", "learning", "programming"]
description = "The EndBASIC programming language - Raspberry Pi support"
homepage = "https://www.endbasic.dev/"
repository = "https://github.com/endbasic/endbasic"
readme = "README.md"
edition = "2018"

[dependencies]
async-channel = "2.2"
async-trait = "0.1"
rppal = "0.17"
tokio = { version = "1", features = ["full"] }

[dependencies.endbasic-core]
version = "0.10.99" # ENDBASIC-VERSION
path = "../core"

[dependencies.endbasic-std]
version = "0.10.99" # ENDBASIC-VERSION
path = "../std"

[dependencies.endbasic-terminal]
version = "0.10.99" # ENDBASIC-VERSION
path = "../terminal"
