[package]
name = "endbasic-rpi"
version = "0.12.99" # ENDBASIC-VERSION
license = "AGPL-3.0-or-later"
authors = ["Julio Merino <jmmv@endbasic.dev>"]
categories = ["development-tools", "parser-implementations"]
keywords = ["basic", "interpreter", "learning", "programming"]
description = "The EndBASIC programming language - Raspberry Pi support"
homepage = "https://www.endbasic.dev/"
repository = "https://github.com/endbasic/endbasic"
readme = "README.md"
edition = "2024"

[lints]
workspace = true

[dependencies]
rppal = "0.17"

[dependencies.endbasic-std]
version = "0.12.99" # ENDBASIC-VERSION
path = "../std"
