[package]
name = "endbasic-sdl"
version = "0.13.99" # ENDBASIC-VERSION
license = "AGPL-3.0-or-later"
authors = ["Julio Merino <jmmv@endbasic.dev>"]
categories = ["development-tools", "parser-implementations"]
keywords = ["basic", "interpreter", "learning", "programming"]
description = "The EndBASIC programming language - SDL graphical console"
homepage = "https://www.endbasic.dev/"
repository = "https://github.com/endbasic/endbasic"
readme = "README.md"
edition = "2024"

[lints]
workspace = true

[dependencies]
async-channel = "2.2"
async-trait = "0.1"
once_cell = "1.8"

[dependencies.endbasic-core]
version = "0.13.99" # ENDBASIC-VERSION
path = "../core"

[dependencies.endbasic-std]
version = "0.13.99" # ENDBASIC-VERSION
path = "../std"

[target.'cfg(target_os = "windows")'.dependencies.sdl2]
version = "0.38"
default-features = false

[target.'cfg(not(target_os = "windows"))'.dependencies.sdl2]
version = "0.38"
default-features = false
features = ["use-pkgconfig"]

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-app-kit = { version = "0.3", features = ["NSApplication", "NSRunningApplication"] }

[dev-dependencies]
flate2 = "1.0"
futures-lite = "2.2"
tempfile = "3"
