[package]
name = "endbasic-st7735s"
version = "0.11.99" # ENDBASIC-VERSION
license = "Apache-2.0"
authors = ["Julio Merino <jmmv@endbasic.dev>"]
categories = ["development-tools", "parser-implementations"]
keywords = ["basic", "interpreter", "learning", "programming"]
description = "The EndBASIC programming language - st7735s console"
homepage = "https://www.endbasic.dev/"
repository = "https://github.com/endbasic/endbasic"
readme = "README.md"
edition = "2024"

[lints]
workspace = true

[dependencies]
async-channel = "2.2"
async-trait = "0.1"
tokio = { version = "1", features = ["full"] }

[dependencies.endbasic-core]
version = "0.11.99" # ENDBASIC-VERSION
path = "../core"

[dependencies.endbasic-std]
version = "0.11.99" # ENDBASIC-VERSION
path = "../std"

[dev-dependencies]
tempfile = "3"
