[package]
name = "endbasic-std"
version = "0.7.0" # ENDBASIC-VERSION
license = "Apache-2.0"
authors = ["Julio Merino <jmmv@endbasic.dev>"]
categories = ["development-tools", "parser-implementations"]
keywords = ["basic", "interpreter", "learning", "programming"]
description = "The EndBASIC programming language - standard library"
homepage = "https://www.endbasic.dev/"
repository = "https://github.com/endbasic/endbasic"
readme = "README.md"
edition = "2018"

[features]
default = ["crossterm"]
rpi = ["rppal"]

[dependencies]
async-trait = "0.1"
base64 = "0.13"
bytes = "1.0"
crossterm = { version = "0.18", optional = true }
futures-lite = "1.1"
radix_trie = "0.2.1"
rppal = { version = "0.11.3", optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
time = { version = "0.2", features = ["std"] }

[dependencies.endbasic-core]
version = "0.7.0" # ENDBASIC-VERSION
path = "../core"

# We don't directly use getrandom but rand does, and we have to customize how
# getrandom is built if we want it to work in a WASM context.
[dependencies.getrandom]
version = "0.2"
features = ["js"]

[dependencies.rand]
version = "0.8"
default-features = false
features = ["small_rng", "std", "std_rng"]

[dependencies.reqwest]
version = "0.11"
default-features = false
features = ["rustls-tls"]

[dev-dependencies]
filetime = "0.2"
tempfile = "3"
tokio = "1"
