[package]
name = "endbasic-std"
version = "0.11.99" # ENDBASIC-VERSION
license = "Apache-2.0"
authors = ["Julio Merino <jmmv@endbasic.dev>"]
categories = ["development-tools", "parser-implementations"]
keywords = ["basic", "interpreter", "learning", "programming"]
description = "The EndBASIC programming language - standard library"
homepage = "https://www.endbasic.dev/"
repository = "https://github.com/endbasic/endbasic"
readme = "README.md"
edition = "2018"

[dependencies]
async-channel = "2.2"
async-trait = "0.1"
futures-lite = "2.2"
radix_trie = "0.2"
time = { version = "0.3", features = ["formatting", "local-offset", "std"] }

[dependencies.endbasic-core]
version = "0.11.99" # ENDBASIC-VERSION
path = "../core"

# We don't directly use getrandom but rand does, and we have to customize how
# getrandom is built if we want it to work in a WASM context.
[dependencies.getrandom]
version = "0.2"
features = ["js"]

[dependencies.rand]
version = "0.8"
default-features = false
features = ["small_rng", "std", "std_rng"]

[dev-dependencies]
flate2 = "1.0"
filetime = "0.2"
tempfile = "3"
tokio = { version = "1", features =  ["full"] }
