[package]
name = "endbasic-terminal"
version = "0.11.99" # ENDBASIC-VERSION
license = "Apache-2.0"
authors = ["Julio Merino <jmmv@endbasic.dev>"]
categories = ["development-tools", "parser-implementations"]
keywords = ["basic", "interpreter", "learning", "programming"]
description = "The EndBASIC programming language - terminal console"
homepage = "https://www.endbasic.dev/"
repository = "https://github.com/endbasic/endbasic"
readme = "README.md"
edition = "2024"

[dependencies]
async-channel = "2.2"
async-trait = "0.1"
crossterm = "0.27"
tokio = { version = "1", features = ["rt"] }

[dependencies.endbasic-core]
version = "0.11.99" # ENDBASIC-VERSION
path = "../core"


[dependencies.endbasic-std]
version = "0.11.99" # ENDBASIC-VERSION
path = "../std"
