[package]
name = "endbasic-web"
version = "0.8.0" # ENDBASIC-VERSION
license = "Apache-2.0"
authors = ["Julio Merino <jmmv@endbasic.dev>"]
categories = ["development-tools", "parser-implementations"]
keywords = ["basic", "interpreter", "learning", "programming"]
description = "The EndBASIC programming language - web interface"
homepage = "https://www.endbasic.dev/"
repository = "https://github.com/endbasic/endbasic"
readme = "README.md"
edition = "2018"
build = "build.rs"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
async-channel = "1.5"
async-trait = "0.1"
console_error_panic_hook = { version = "0.1.6", optional = true }
js-sys = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
time = { version = "0.2", features = ["serde", "std"] }
wasm-bindgen = "^0.2.78"
wasm-bindgen-futures = "0.4"

[dependencies.endbasic-core]
version = "0.8.0" # ENDBASIC-VERSION
path = "../core"

[dependencies.endbasic-repl]
version = "0.8.0" # ENDBASIC-VERSION
path = "../repl"

[dependencies.endbasic-std]
version = "0.8.0" # ENDBASIC-VERSION
path = "../std"

[dependencies.web-sys]
version = "0.3"
features = [
    "CanvasRenderingContext2d",
    "EventTarget",
    "HtmlCanvasElement",
    "ImageData",
    "InputEvent",
    "KeyboardEvent",
    "Storage",
    "TextMetrics",
    "Window",
]

[build-dependencies]
vergen = "3"

[dev-dependencies]
wasm-bindgen-test = "0.3"
