[package]
name = "endbasic-web"
version = "0.13.99" # ENDBASIC-VERSION
license = "AGPL-3.0-or-later"
authors = ["Julio Merino <jmmv@endbasic.dev>"]
categories = ["development-tools", "parser-implementations"]
keywords = ["basic", "interpreter", "learning", "programming"]
description = "The EndBASIC programming language - web interface"
homepage = "https://www.endbasic.dev/"
repository = "https://github.com/endbasic/endbasic"
readme = "README.md"
edition = "2024"
build = "build.rs"
publish = false

[lints]
workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
async-channel = "2.2"
async-trait = "0.1"
console_error_panic_hook = { version = "0.1", optional = true }
js-sys = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
time = { version = "0.3", features = ["serde", "std", "wasm-bindgen"] }
url = "2.2"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"

[dependencies.endbasic-client]
version = "0.13.99" # ENDBASIC-VERSION
path = "../client"

[dependencies.endbasic-core]
version = "0.13.99" # ENDBASIC-VERSION
path = "../core"

[dependencies.endbasic-repl]
version = "0.13.99" # ENDBASIC-VERSION
path = "../repl"

[dependencies.endbasic-std]
version = "0.13.99" # ENDBASIC-VERSION
path = "../std"

[dependencies.web-sys]
version = "0.3.77"
features = [
    "AudioContext",
    "AudioDestinationNode",
    "AudioNode",
    "AudioParam",
    "AudioScheduledSourceNode",
    "BaseAudioContext",
    "CanvasRenderingContext2d",
    "ContextAttributes2d",
    "Document",
    "Element",
    "EventTarget",
    "HtmlCanvasElement",
    "ImageData",
    "InputEvent",
    "KeyboardEvent",
    "Location",
    "MessageChannel",
    "MessageEvent",
    "MessagePort",
    "OscillatorNode",
    "OscillatorType",
    "Performance",
    "Storage",
    "TextMetrics",
    "Window",
]

[build-dependencies.vergen]
version = "8"
features = ["build", "git", "gitcl"]

[dev-dependencies]
wasm-bindgen-test = "0.3"
